# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  toolster-net-browser-checker.html
.github/workflows/: linter-check.yml  test-coverage.yml
page_loader/: __init__.py  app_logger.py  data_module.py  download_resources.py  fs_module.py  get_paths.py  modify_html.py  page_loader.py  paths_module.py  requests_module.py  save_data.py
page_loader/scripts/: CLI.py  loader.py
test/: test_get_html_file_path.py  test_get_image_path.py  test_get_resource_path.py  test_get_resources_dir_path.py  test_modify_html.py  test_requests_module.py  test_save_data.py
test/fixtures/: test_get_html_file_path.json  test_get_html_file_path_result  test_get_image_path.json  test_get_image_path_result  test_get_resources_dir_path.json  test_get_resources_dir_path_result  test_get_tags_list_result.html  test_modify_html.html  test_modify_html_result.html
toolster-net-browser-checker_files/: toolster-net-.html  toolster-net-css-footer.css  toolster-net-css-header.css  toolster-net-css-tool.css  toolster-net-js-jrating-jRating-jquery.js  toolster-net-pagead-js-adsbygoogle.js
